Fix OTP translation

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -23,7 +23,7 @@
       "text": "Text (default)",
       "note": "Note",
       "password": "Password",
-      "otp": "Note"
+      "otp": "OTP"
     }
   },
   "entries-list": {
