--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -23,7 +23,7 @@
       "text": "Текст (по умолчанию)",
       "note": "Заметка",
       "password": "Пароль",
-      "otp": "Заметка"
+      "otp": "OTP"
     }
   },
   "entries-list": {
