--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -44,7 +44,7 @@
     "add-custom-field-btn": "Benutzerdefiniertes Feld hinzufügen",
     "attachments": "Anhänge",
     "cancel-edit": "Abbrechen",
-    "click-to-edit": "Zum bearbeiten klicken,
+    "click-to-edit": "Zum bearbeiten klicken",
     "custom-fields": "Benutzerdefinierte Felder",
     "edit": "Bearbeiten",
     "edit-document": "Dokument bearbeiten",
